refactor: translate Kitnet domain to English and fix Sonar stream issue